Punkte durch entsprechenden amsmath‐Befehl ersetzen
In amsmath werden Befehle für verschiedene Dreipunkte definiert. Damit
wird es im Dokument einheitlicher, der Dreipunktbefehl ist immer besser
als drei Punkte und es sind auch gleich die richtigen Punkte, zwischen +
z.B. \cdots und nicht \ldots.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1785 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/laue-algogeo/skript.tex
+++ b/laue-algogeo/skript.tex
@@ -298,19 +298,19 @@ $\operatorname{dim } A = - 1$ falls $A = \emptyset$ und $\operatorname{dim } L$ 
 \end{defini}
 
 \begin{defini}[Affine Kombination von Punkten]
-Seien $p_1, p_2.. p_n \in \R^d, n \geq 1$ und 
-$\lambda_1... \lambda_n \in \R$
+Seien $p_1, p_2, \dotsc, p_n \in \R^d, n \geq 1$ und 
+$\lambda_1, \dotsc, \lambda_n \in \R$
 mit $\sum_{i=1}^n \lambda_i = 1$
-dann nennt man \[\lambda_1 p_1 + \lambda_2 p_2 + ... + \lambda_n p_n\]
+dann nennt man \[\lambda_1 p_1 + \lambda_2 p_2 + \dotsb + \lambda_n p_n\]
 eine affine Kombination der Punkte $p_i$.
 \end{defini}
 
 \begin{defini}[Affine H¸lle]
 Sei $S \subseteq \R^d$.
 Dann nennt man 
-\[\operatorname{aff}(S) := {  \lambda_1 p_1 + \lambda_2 p_2 + ... + \lambda_n p_n \text{ mit } n \geq 1,
-p1, ... ,p_n \in S,
-\lambda_1... \lambda_n \in \R
+\[\operatorname{aff}(S) := {  \lambda_1 p_1 + \lambda_2 p_2 + \dotsb + \lambda_n p_n \text{ mit } n \geq 1,
+p1, \dotsc ,p_n \in S,
+\lambda_1,\dotsc, \lambda_n \in \R
 \sum_{i=1}^n \lambda_i = 1 }\]
 affine H¸lle von S.
 \end{defini}
@@ -329,8 +329,8 @@ Die affine H¸lle ist die kleinste affine Unterraum, der S enth‰lt.
 \section{Affine Abh‰ngigkeiten/Unabh‰ngigkeiten}
 
 \begin{defini}[Affine Abh‰ngigkeit]
-Punkte $p_1 .. p_n \in \R^d$ heiﬂen affin abh‰ngig, wenn es $\alpha_1 ... \alpha_n \in \mathbb R$ gibt, so dass gilt:
-\[\alpha_1 p_1 + \alpha_2 p_2 + .... + \alpha_n p_n = 0 \text{ mit }
+Punkte $p_1,\dotsc, p_n \in \R^d$ heiﬂen affin abh‰ngig, wenn es $\alpha_1,\dotsc, \alpha_n \in \mathbb R$ gibt, so dass gilt:
+\[\alpha_1 p_1 + \alpha_2 p_2 + \dotsb + \alpha_n p_n = 0 \text{ mit }
 \sum_{i=1}^n \alpha_i = 0 \text{ und mind. ein } \alpha_i \neq \emptyset.\]
 Ansonsten heiﬂen die Punkte affin unabh‰ngig.
 \end{defini}
@@ -344,7 +344,7 @@ Ansonsten heiﬂen die Punkte affin unabh‰ngig.
 \end{bsp}
 
 \begin{bemerk}
-$p_1 ... p_n$ sind affin abh‰ngig ($n \geq 3$) gdw. $p_2 - p_1, p_3 - p_1 .. p_n - p_1$ linear abh‰ngig sind.
+$p_1,\dotsc, p_n$ sind affin abh‰ngig ($n \geq 3$) gdw. $p_2 - p_1, p_3 - p_1, \dotsc, p_n - p_1$ linear abh‰ngig sind.
 \end{bemerk}
 
 \section{Affine Abbildung}
@@ -360,7 +360,7 @@ aufgeschrieben werden.
 $\R^d$
 
 \begin{defini}{Skalarprodukt}
-$v = (v_1, v_2, ... , v_d) \in \R^d$ und $w = (w_1, w_2, .. w_n) \in \R^d$
+$v = (v_1, v_2, \dotsc, v_d) \in \R^d$ und $w = (w_1, w_2, \dotsc, w_n) \in \R^d$
 \[<v,w> := v^Tw = \sum_i=1^d v_i w_i\]
 \end{defini}
 
@@ -447,10 +447,10 @@ nicht-vertikale Hyperebene: Hyperebene mit $a_d \neq 0$ heiﬂt nicht-vertikal (Di
 \begin{equation*} 
 \begin{split}
 h &= \{x \in \R^d | a^Tx = \alpha\} \\
-&= \{x \in \R^d | (a_1, a_2, ... , a_d)^Tx = \alpha\} (\text{mit } a_d \neq 0)\\
-&= \{x \in \R^d | a_1 x_1 + a_2x_2 + ... +a_d x_d = \alpha\}  \\
-&= \{x \in \R^d | x_d = \frac{1}{a_d} (a_1x_1 + a_2x_2 + ... + a_{d-1} x_{d-1} - \alpha)\}  \\
-&= \{x \in \R^d | x_d = b_1x_1 + b_2x_2 + ... + b_{d-1} x_{d-1} - \beta\}  \\
+&= \{x \in \R^d | (a_1, a_2, \dotsc, a_d)^Tx = \alpha\} (\text{mit } a_d \neq 0)\\
+&= \{x \in \R^d | a_1 x_1 + a_2x_2 + \dotsb +a_d x_d = \alpha\}  \\
+&= \{x \in \R^d | x_d = \frac{1}{a_d} (a_1x_1 + a_2x_2 + \dotsb + a_{d-1} x_{d-1} - \alpha)\}  \\
+&= \{x \in \R^d | x_d = b_1x_1 + b_2x_2 + \dotsb + b_{d-1} x_{d-1} - \beta\}  \\
 &= \text{ Graph einer affinen Abbildung } \R^{d-1} \rightarrow \R
 \end{split}
 \end{equation*}
@@ -459,12 +459,12 @@ h &= \{x \in \R^d | a^Tx = \alpha\} \\
 beliebiger Punkt aus $\mathbb R^d$ entspricht nicht-vertikale  Hyperebene im $\R^d$
 
 \begin{defini}[Dualit‰t]
-Sei $p = (p_1, p_2, ... , p_d) \in \R^d$, dann ist 
+Sei $p = (p_1, p_2, \dotsc, p_d) \in \R^d$, dann ist 
 \[p^* = \{ x \in \R^d | x_d = \sum_{i=1}^{d-1} p_i x_i = p_d \}\] 
 die duale Hyperebene zu $p$.
 
 Sei $h = \{x \in \R^d | x_d = \sum_{i = 1}^{d-1}  b_i x_i = \beta\}$, dann ist 
-\[h^* = (b_1, b_2, ... , b_{d-1}, \beta)\] der duale Punkt zu $h$.
+\[h^* = (b_1, b_2, \dotsc, b_{d-1}, \beta)\] der duale Punkt zu $h$.
 \end{defini}
 
 \begin{eigen}
@@ -548,9 +548,9 @@ Das kleinste konvexe Objekt, dass X enth\"alt.
 \end{bsp}
 
 \begin{defini}[Konvexkombination]
- Sei $p_{1}... p_{n} \in \mathbb R^d$, dann heiﬂt 
-\[\lambda_{1} p_{1} + \lambda_{2}p_{2} + ... + \lambda_{d}p_{d}\text{ mit } \lambda_{i} \geq 0, \sum_{i=1}^n \lambda_i = 1\] 
-eine Konvexkombination von $p_{1} .. p_{d}$. 
+ Sei $p_{1},\dotsc, p_{n} \in \mathbb R^d$, dann heiﬂt 
+\[\lambda_{1} p_{1} + \lambda_{2}p_{2} + \dotsb + \lambda_{d}p_{d}\text{ mit } \lambda_{i} \geq 0, \sum_{i=1}^n \lambda_i = 1\] 
+eine Konvexkombination von $p_{1}, \dotsc, p_{d}$. 
 \end{defini}
 
 \begin{bsp}
@@ -596,7 +596,7 @@ Falls $S \subseteq \R^d, p \in \operatorname{conv}(S)$ gilt, so existiert eine T
 \end{thrm}
 
 \begin{thrm}[Helly] 
-Seien $C_{1} ... C_{n} \in \mathbb R^d$ konvexe Teilmengen und $n \geq d + 1$.
+Seien $C_{1}, \dotsc, C_{n} \in \mathbb R^d$ konvexe Teilmengen und $n \geq d + 1$.
 Wenn sich alle $d+1$-Tupel dieser konvexen Mengen einen nichtleeren Durchschnitt haben, so ist der Durchschnitt aller dieser Mengen nichtleer, d.h. \[
 \bigcap_{i=1}^n C_{i} \neq \emptyset
 \]
