Abkürzungen mit Spatien versehen
Abkürzungen am Satzanfang schreibt man aus und in einem Satz setzt man
i̲n̲n̲e̲r̲h̲a̲l̲b̲ der Abkürzung nach den Punkten ein Spatium, da die Abkürzung
eine Sinneinheit bildet, man den optisch großen Raum, den der Punkt
erzeugt, verkleinern will, und man einen Zeilenumbruch oder eine Dehnung
(wenn TeX die Zeile auf Satzbreite bringen muss) an dieser Stelle
verhindern will.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1789 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/laue-algogeo/skript.tex
+++ b/laue-algogeo/skript.tex
@@ -282,7 +282,7 @@ Vorraussetzung: Lineare Algebra im $\R^d$
 
 \begin{defini}[Affiner Unterraum]
 Eine Teilmenge nennt man affiner Unterraum, wenn entweder $A = \emptyset$ oder $A$ ist ein \enquote{verschobener} linearer Unterraum.
-D.h. $A = V + L$, wobei $L$ ein linearer Unterraum des $\R^d$ ist und $v \in \R^d$ ein Vektor.
+Das heißt $A = V + L$, wobei $L$ ein linearer Unterraum des $\R^d$ ist und $v \in \R^d$ ein Vektor.
 \end{defini}
 
 \begin{bsp}
@@ -351,7 +351,7 @@ $p_1,\dotsc, p_n$ sind affin abhängig ($n \geq 3$) gdw. $p_2 - p_1, p_3 - p_1, \
 \section{Affine Abbildung}
 
 \begin{defini}[Affine Abbildung]
-Eine affine Abbildung ist eine Abbildung $f \colon \R^d \rightarrow \R^k$, die als Kombination von linearer Abbildung und Translation ausgedrückt werden kann, d.h. in Koordinatenschreibweise kann $f$ als
+Eine affine Abbildung ist eine Abbildung $f \colon \R^d \rightarrow \R^k$, die als Kombination von linearer Abbildung und Translation ausgedrückt werden kann, d.\,h. in Koordinatenschreibweise kann $f$ als
 \[f(x) = Ax + b \text{ mit } A \in \R^{k \times d} (k\times d-\text{Matrix}), b \in \R^k\]
 aufgeschrieben werden.
 \end{defini}
@@ -414,7 +414,7 @@ Ein affiner Unterraum mit Codimension 1 im $\R^d$.
 
 \begin{eigen}
 \begin{itemize}
-\item Vektor a heißt Normalenvektor. Er steht senkrecht auch Hyperebene, d.h. \[\forall p,q \in h: <a,p-q> = 0\]
+\item Vektor a heißt Normalenvektor. Er steht senkrecht auch Hyperebene, d.\,h. \[\forall p,q \in h: <a,p-q> = 0\]
 \item Entfernung von h zum Ursprung $ = \frac{|\alpha|}{||a||}$
 \item h ist invariant unter Skalierung der definierten gleichung mit Skalar $\lambda \neq 0$
 \end{itemize}
@@ -516,7 +516,7 @@ h
 \begin{lemma}
 Seien $p,q$ und $r \in \R^2$, dann sind folgende Aussagen äquivalent:
 \begin{itemize}
-\item Die Punkte $p$,$q$ und $r$ sind colinear, d.h. liegen auf einer Gerade $l$
+\item Die Punkte $p$,$q$ und $r$ sind colinear, d.\,h. liegen auf einer Gerade $l$
 \item Die Geraden $p^*, q^*$ und $r^*$ schneiden sich in einem gemeinsamen Punkt $l^*$ oder sie sind alle parallel zueinander, falls $l$ vertikal war.
 \end{itemize}
 \end{lemma}
@@ -538,7 +538,7 @@ Der Durchschnitt konvexer Mengen ist wieder Konvex.
 \end{fakt}
 
 \begin{defini}
-Sei $X \subseteq \R^d$ eine Teilmenge. Die konvexe Hülle von X ist definiert als der Durchschnitt aller konvexer Hüllen, die $X$ enthalten, d.h.
+Sei $X \subseteq \R^d$ eine Teilmenge. Die konvexe Hülle von X ist definiert als der Durchschnitt aller konvexer Hüllen, die $X$ enthalten, d.\,h.
 \[
 \operatorname{conv}(x) := \bigcap_{C,\text{ so dass }X \subseteq C\text{ und }C\text{ konvex}} C
 \]
@@ -559,7 +559,7 @@ Jede kombination liegt innerhalb der von den Punkten aufgespannten konvexen Hüll
 \end{bsp}  
 
 \begin{lemma}
-Sei $X \subseteq \R^d$. Die konvexe Hülle stimmt mit der Menge aller endlichen Konvexkombinationen von Punkten von $X$ überein, d.h. 
+Sei $X \subseteq \R^d$. Die konvexe Hülle stimmt mit der Menge aller endlichen Konvexkombinationen von Punkten von $X$ überein, d.\,h. 
 \[
 \operatorname{conv}(x) = \{ \sum_{p \in S} \lambda_{p} p | S \subseteq X\text{ ist endlich und } \sum_{p \in S} \lambda_{p} = 1, \lambda_{p} \geq 0 \forall p \in S\}
 \]
@@ -574,7 +574,7 @@ conv(x) = \bigcap_{H\text{, so dass }X \subseteq H, H\text{ Halbraum}} H
 \end{lemma}
 
 \begin{thrm}[Separationstheorem]
-Seien $C$ und $D \in \R^d$ zwei konvexe Mengen, mit $C \cap D = \emptyset$. Dann existiert eine Hyperebene $h = \{ x \in \R^d | a^Tx = \alpha \}$, die beide Mengen schwach separiert, d.h. $C \subseteq \bar h^+$ und $D \subseteq \bar h^-$
+Seien $C$ und $D \in \R^d$ zwei konvexe Mengen, mit $C \cap D = \emptyset$. Dann existiert eine Hyperebene $h = \{ x \in \R^d | a^Tx = \alpha \}$, die beide Mengen schwach separiert, d.\,h. $C \subseteq \bar h^+$ und $D \subseteq \bar h^-$
 \end{thrm}
 
 \begin{fakt}
@@ -598,7 +598,7 @@ Falls $S \subseteq \R^d, p \in \operatorname{conv}(S)$ gilt, so existiert eine T
 
 \begin{thrm}[Helly] 
 Seien $C_{1}, \dotsc, C_{n} \in \R^d$ konvexe Teilmengen und $n \geq d + 1$.
-Wenn sich alle $d+1$-Tupel dieser konvexen Mengen einen nichtleeren Durchschnitt haben, so ist der Durchschnitt aller dieser Mengen nichtleer, d.h. \[
+Wenn sich alle $d+1$-Tupel dieser konvexen Mengen einen nichtleeren Durchschnitt haben, so ist der Durchschnitt aller dieser Mengen nichtleer, d.\,h. \[
 \bigcap_{i=1}^n C_{i} \neq \emptyset
 \]
 \end{thrm}
