Bindestriche durch Gedankenstriche ersetzen
Ein - ist in TeX ein Bindestrich, das was Wortteile verbindet oder bei
Worttrennungen verwendet wird. Der Gedankenstrich -- dient zum Gliedern
der Sätze, also zum Trennen von Satzteilen.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1791 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/laue-algogeo/skript.tex
+++ b/laue-algogeo/skript.tex
@@ -424,8 +424,8 @@ Ein affiner Unterraum mit Codimension 1 im $\R^d$.
 
 \begin{defini}[offener Halbraum]
 Jede Hyperebene teilt den Raum $\R^d$ in drei Teile, die Hyperebene und die zwei offenen Halbräume:
-\[ h^+ := {x \in \R^d | a^Tx > a} \text{ - positiv offener Halbraum} \]
-\[ h^- := {x \in \R^d | a^Tx < a} \text{ - negativ offener Halbraum} \]
+\[ h^+ := {x \in \R^d | a^Tx > a} \text{ -- positiv offener Halbraum} \]
+\[ h^- := {x \in \R^d | a^Tx < a} \text{ -- negativ offener Halbraum} \]
 \end{defini}
 
 \begin{bemerk}
@@ -433,16 +433,16 @@ positiver und negativer Halbraum sind durch die Orientierung der Hperebene besti
 \end{bemerk}
 
 \begin{defini}[geschlossener Halbraum]
-\[ \bar{ h^+} := {x \in \R^d | a^Tx \geq a} \text{ - positiv offener Halbraum} \]
-\[ \bar h^- := {x \in \R^d | a^Tx \leq a} \text{ - negativ offener Halbraum} \]
+\[ \bar{ h^+} := {x \in \R^d | a^Tx \geq a} \text{ -- positiv offener Halbraum} \]
+\[ \bar h^- := {x \in \R^d | a^Tx \leq a} \text{ -- negativ offener Halbraum} \]
 \end{defini}
 
 Konventionen: 
 nicht-vertikale Hyperebene: Hyperebene mit $a_d \neq 0$ heißt nicht-vertikal (Die letzte Komponente ist nicht ungleich 0)
 
 \begin{itemize}
-\item $h^+$ - Halbräume \enquote{über} der Hyperebene
-\item $h^-$ - Halbräume \enquote{unter} der Hyperebene
+\item $h^+$ -- Halbräume \enquote{über} der Hyperebene
+\item $h^-$ -- Halbräume \enquote{unter} der Hyperebene
 \end{itemize}
 
 \begin{equation*} 
