Fehlende Klammern ergänzen
git-svn-id: https://svn.lug-jena.de/uni-skripte@1796 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/alt-linopt/skript.latex
+++ b/alt-linopt/skript.latex
@@ -3825,11 +3825,11 @@ Lösungsmenge des dualen Problems mit $S_{D}$.
   Sei $x\in S_{P}$ beliebig. Dann ist $x_{N}=0$. Denn zu jedem Index $j\in N$
   gibt es nach der Definition von $N$ ein $(y,s)\in S_{D}$ mit $s_{j}\neq 0$.
   Es ist $c^{T}x=b^{T}y\Leftrightarrow^{\text{\autoref{eq:52}}} x^{T}s=0
-  \Leftrightarrow x_{i}s_{i}=0, i=1,\dotsc,n$. Da $x,y,s)$ Lösung von
+  \Leftrightarrow x_{i}s_{i}=0, i=1,\dotsc,n$. Da $(x,y,s)$ Lösung von
   \autoref{eq:510} ist, folgt $x_{j}s_{j}=0\Rightarrow x_{j}=0$.
 
   Entsprechend gilt für beliebige $(y,s)\in S_{D}\colon s_{B}=0$. Denn zu
-  beliebigem $j\in B$ gibt es ein $x\in S_{P}$ mit $x_{j}\neq0$. Da $x,y,s)$
+  beliebigem $j\in B$ gibt es ein $x\in S_{P}$ mit $x_{j}\neq0$. Da $(x,y,s)$
   Lösung von \autoref{eq:510} ist $x_{j}s_{j}=0\Rightarrow s_{j}=0$. Zu jedem
   Index $j\in B$ gibt es ein $x^{(j)}\in S_{P}$ mit $x_{j}^{(j)}\neq0$. Da
   $S_{P}$ konvex ist, folgt,
