--- a/laue-algogeo/skript.tex
+++ b/laue-algogeo/skript.tex
@@ -168,7 +168,7 @@
 % mathtools.pdf, z. B. \abs[\big]{\abs{a}-\abs{b}} \leq \abs{a+b}
 \DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
 \DeclarePairedDelimiter{\norm}{\lVert}{\rVert}
-\DeclarePairedDelimiter{\sprod}{\lange}{\rangle}
+\DeclarePairedDelimiter{\sprod}{\langle}{\rangle}
 
 % Das original Epsilon sieht nicht so toll aus
 \renewcommand*{\epsilon}{\varepsilon}
