Bei \norm{…}^a die Basis in TeX‐Gruppe packen
TeX4ht hat Probleme, wenn die Basis aus mehreren Tokens besteht. Dies ist
bei \norm{} der Fall; ein Token ist \norm und das andere ist {…}. Dies
muss in eine TeX‐Gruppe gefasst werden, damit es als ein Token gelesen
wird und TeX4ht glücklich ist.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1804 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/laue-algogeo/skript.tex
+++ b/laue-algogeo/skript.tex
@@ -400,7 +400,7 @@ $v,w \in R^d$:
 
 \begin{satz}[Kosinussatz]
 $p,q,r \in \R^d$:
-\[\norm{q - r}^2 = \norm{q-p}^2 + \norm{r-p}^2 - 2 \sprod{r-p, q-p}\]
+\[{\norm{q - r}}^2 = {\norm{q-p}}^2 + {\norm{r-p}}^2 - 2 \sprod{r-p, q-p}\]
 \end{satz}
 
 \begin{defini}[Hyperebenen]
