\accentset{\circ} durch \mathring ersetzen
Es gibt den Spezialbefehl \mathring, der genau das macht, was mit
\accentset{\circ} erreicht wird. Da dieser direkt von LaTeX
bereitgestellt wird, auf diesen umstellen.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1813 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/zaehle-topologie/skript.ltx
+++ b/zaehle-topologie/skript.ltx
@@ -58,7 +58,6 @@
 \usepackage[final,babel]{microtype} % Verbesserung der Typographie
 %\usepackage[osf,slantedGreek]{mathpazo}
 \usepackage[scaled=.92]{helvet}
-\usepackage{accents}
 \usepackage{nicefrac}
 \usepackage{wasysym}
 \usepackage[T1,small,euler-digits]{eulervm}
@@ -346,7 +345,7 @@ die Geometrie bzw. klassische Mechanik oder geometrische Maßtheorie.
   $A$ bezüglich $(X,\CT)$, falls eine Umgebung $U_{x}$ existiert mit
   $U_{x}\subset A$.
 
-  Die Menge $\accentset{\circ}{A}$ aller inneren
+  Die Menge $\mathring{A}$ aller inneren
   Punkte von $A$ heißt \highl[Kern!offener]{offener Kern} oder \highl{Inneres}
   von $A$.
 \end{defini}
@@ -366,16 +365,16 @@ die Geometrie bzw. klassische Mechanik oder geometrische Maßtheorie.
 %lemma 1.8
 \begin{lem}\label{lem:18}
   \begin{enumerate}[(i)]
-   \item $\accentset{\circ}{A}$ offen
+   \item $\mathring{A}$ offen
    \item $\overline{A}$ abgeschlossen, $\overline{\overline{A}}= \overline{A}$
-   \item $\accentset{\circ}{A}\subset A\subset A\cup\partial A=\overline{A}$
+   \item $\mathring{A}\subset A\subset A\cup\partial A=\overline{A}$
   \end{enumerate}
   \begin{proof}
     \begin{enumerate}[(i)]
-     \item $\forall x\in \accentset{\circ}{A}\,\exists U_{x}\in\CT$ mit
-      $U_{x}\subset A\Rightarrow \accentset{\circ}{A} \subset\bigcup_{x\in \accentset{\circ}{A}} U_{x}$. Nun
+     \item $\forall x\in \mathring{A}\,\exists U_{x}\in\CT$ mit
+      $U_{x}\subset A\Rightarrow \mathring{A} \subset\bigcup_{x\in \mathring{A}} U_{x}$. Nun
       ist $U_{x}$ aber auch Umgebung für jedes $y\in U_{x}$. Somit ist $y\in
-      \accentset{\circ}{A}$. Also ist $\accentset{\circ}{A}=\bigcup_{x\in \accentset{\circ}{A}}U_{x}$.
+      \mathring{A}$. Also ist $\mathring{A}=\bigcup_{x\in \mathring{A}}U_{x}$.
      \item Wir zeigen $\overline{\overline{A}}=\overline{A}$. Klar ist, dass
       $\overline{A}\subset\overline{\overline{A}}$. Sei
       $x\in\overline{\overline{A}}\Rightarrow\forall U_{x}\in\CT\,\exists
@@ -394,19 +393,19 @@ die Geometrie bzw. klassische Mechanik oder geometrische Maßtheorie.
       $x\in\overline{A}\Rightarrow\forall U_{x}\colon U_{x}\cap
       A\neq\emptyset$. Nun hat man entweder $\exists U_{x}\colon U_{x}\cap
       A\neq\emptyset$ und $U_{x}\cap A^{c}=\emptyset$, d.\,h. $U_{x}\subset
-      A$. Also $x\in \accentset{\circ}{A}$. Oder es ist $\forall U_{x}\colon U_{x}\cap
+      A$. Also $x\in \mathring{A}$. Oder es ist $\forall U_{x}\colon U_{x}\cap
       A\neq\emptyset$ und $U_{x}\cap A^{c}\neq\emptyset$, dann $x\in\partial
       A$. Also $\overline{A}\subset A\cup\partial A$.
     \end{enumerate}
   \end{proof}
 \end{lem}
 
-Übung: $\overline{A}^{c}= (A^{c})^{o}, A\subset X, (\accentset{\circ}{A})^{c}=\overline{A^{c}}$
+Übung: $\overline{A}^{c}= (A^{c})^{o}, A\subset X, (\mathring{A})^{c}=\overline{A^{c}}$
 
 %folg 1.10
 \begin{folg}
   \begin{enumerate}[(i)]
-   \item $A$ offen $\Leftrightarrow A=\accentset{\circ}{A}$ (Charakterisierung)
+   \item $A$ offen $\Leftrightarrow A=\mathring{A}$ (Charakterisierung)
    \item $A$ abgeschlossen $\Leftrightarrow A=\overline{A}$
   \end{enumerate}
   \begin{proof}
@@ -442,20 +441,20 @@ die Geometrie bzw. klassische Mechanik oder geometrische Maßtheorie.
   \end{proof}
 
   \begin{enumerate}[(i)]
-   \item $A\subset B\Rightarrow \accentset{\circ}{A}\subset \accentset{\circ}{B}$
+   \item $A\subset B\Rightarrow \mathring{A}\subset \mathring{B}$
    \item Sei $I\neq\emptyset$ beliebig. Dann ist $(\bigcap_{i\in I}
-    A_{i})^{o}\subset\bigcap_{i\in I} \accentset{\circ}{A}_{i}, \bigcup_{i\in I}
-    \accentset{\circ}{A}_{i}\subset (\bigcup_{i\in I} A_{i})^{o}$
-   \item $(\bigcap_{i=1}^{n} A_{i})^{o}= \bigcap_{i=1}^{n} \accentset{\circ}{A}_{i}$.
+    A_{i})^{o}\subset\bigcap_{i\in I} \mathring{A}_{i}, \bigcup_{i\in I}
+    \mathring{A}_{i}\subset (\bigcup_{i\in I} A_{i})^{o}$
+   \item $(\bigcap_{i=1}^{n} A_{i})^{o}= \bigcap_{i=1}^{n} \mathring{A}_{i}$.
   \end{enumerate}
   \begin{proof}
     \begin{enumerate}[(i)]
      \item folgt aus der Definition und der Übungsaufgabe
      \item folgt aus der Definition und der Übungsaufgabe
-     \item $x\in\bigcap_{i=1}^{n} \accentset{\circ}{A}_{i}\Rightarrow\bigcap_{i=1}^{n}
-      \accentset{\circ}{A}_{i}$ ist eine Umgebung von $x$ in $\bigcap_{i=1}^{n} A_{i}$.
+     \item $x\in\bigcap_{i=1}^{n} \mathring{A}_{i}\Rightarrow\bigcap_{i=1}^{n}
+      \mathring{A}_{i}$ ist eine Umgebung von $x$ in $\bigcap_{i=1}^{n} A_{i}$.
       Daraus folgt, $x$ ist innerer Punkt von $\bigcap_{i=1}^{n} A_{i},
-      x\in(\bigcap_{i=1}^{n} A_{i})^{o}\Rightarrow \bigcap_{i=1}^{n} \accentset{\circ}{A}_{i}
+      x\in(\bigcap_{i=1}^{n} A_{i})^{o}\Rightarrow \bigcap_{i=1}^{n} \mathring{A}_{i}
       \subset (\bigcap_{i=1}^{n} A_{i})^{o}$. Umgekehrte Inklusion
       folgt aus dem zweiten Punkt.
     \end{enumerate}
@@ -649,7 +648,7 @@ Dies ist eine Verallgemeinerung des Stetigkeitsbegriffes für metrische Räume.
   \neg(\forall U_{x}\colon U_{x}\cap A\neq\emptyset)\Leftrightarrow \exists
   U_{x}\colon U_{x}\cap A=\emptyset\Leftrightarrow\exists U_{x}\colon
   U_{x}\subseteq A^{c}\Leftrightarrow x\in(A^{c})^{o}$.
- \item $x\in(\accentset{\circ}{A})^{c}\Leftrightarrow\neg(\exists U_{x}\colon
+ \item $x\in{(\mathring{A})}^{c}\Leftrightarrow\neg(\exists U_{x}\colon
   U_{x}\subseteq A)\Leftrightarrow\forall U_{x}\colon U_{x}\nsubseteq
   A\Leftrightarrow\forall U_{x}\colon U_{x}\cap
   A^{c}\neq\emptyset\Leftrightarrow x\in\overline{A^{c}}$
@@ -712,12 +711,12 @@ Dies ist eine Verallgemeinerung des Stetigkeitsbegriffes für metrische Räume.
   alle $G\subset X$ das Komplement $G^{c}=X\setminus G$ auch endlich und jedes
   $G\subset X$ ist offen. Also ist in dem Fall $\CT$ die diskrete Topologie.
  \item Wir suchen ein Beispiel für einen topologischen Raum $(X,\CT)$ und
-  $\{A_{i}\}_{i\in I}\subset\FP(X)$, so dass $(\bigcap_{i\in I}
-  A_{i})^{o}\subsetneq \bigcap_{i\in I} \accentset{\circ}{A}_{i}$. Wir setzen
+  $\{A_{i}\}_{i\in I}\subset\FP(X)$, so dass ${(\bigcap_{i\in I}
+  A_{i})}^{o}\subsetneq \bigcap_{i\in I} \mathring{A}_{i}$. Wir setzen
   $X=\R$ mit gewöhnlicher Topologie,
   $A_{n}\colon=\{x\in\R\colon-\nicefrac{1}{n} <x\}$. Dann
-  $\accentset{\circ}{A}_{n}=A_{n}$ für alle $n$ und es folgt,
-  $\bigcap_{n\geq1} \accentset{\circ}{A}_{n}=\bigcap_{n\geq1}
+  ${\mathring{A}}_{n}=A_{n}$ für alle $n$ und es folgt,
+  $\bigcap_{n\geq1} \mathring{A}_{n}=\bigcap_{n\geq1}
   A_{n}=\{x\in\R\colon x\geq0\}\supsetneq (\bigcap_{n\geq1} A_{n})^{o}=
   \{x\in\R\colon x>0\}$.
  \item Sei $(X,\CT)$ ein topologischer Raum. Für alle Teilmengen $A\subset X$
@@ -726,7 +725,7 @@ Dies ist eine Verallgemeinerung des Stetigkeitsbegriffes für metrische Räume.
    \item $A\subset B\Rightarrow\alpha(A)\subset\alpha(B)$\\
     folgt aus \autoref{lem:111}
    \item $A$ offen $\Rightarrow A\subset\alpha(A)$\\
-    $A\subset\overline{A}, A=\accentset{\circ}{A}\subset(\overline{A})^{o}$
+    $A\subset\overline{A}, A=\mathring{A}\subset(\overline{A})^{o}$
     nach dem obigen Punkt
    \item $\alpha(\alpha(A))=\alpha(A)$\\
     $\alpha(A)$ offen $\Rightarrow\alpha(A)\subset\alpha(\alpha(A))$ und
@@ -770,7 +769,7 @@ Dies ist eine Verallgemeinerung des Stetigkeitsbegriffes für metrische Räume.
   \end{gather}
    \item   \begin{gather}
     \label{eq:u32}
-       \accentset{\circ}{A}= \bigcup_{\substack{O\subseteq A\\ O\in\CT}} O
+       \mathring{A}= \bigcup_{\substack{O\subseteq A\\ O\in\CT}} O
   \end{gather}
    \item Es ist $x\in\partial A$ genau dann, wenn jede Umgebung von $x$ sowohl
     $A$ als auch $A^{c}$ schneidet.
