--- a/carl-hoehereana1/skript.ltx
+++ b/carl-hoehereana1/skript.ltx
@@ -1,18 +1,18 @@
-% Einige zusätzliche Informationen für rubber
+% Einige zusÃ¤tzliche Informationen fÃ¼r rubber
 %  rubber erkennt nicht, dass die Datei weg kann, daher sagen wir es ihm
 % rubber: clean $base.thm
-%  rubber soll nach Änderungen an der Datei nochmal bauen
+%  rubber soll nach Ã„nderungen an der Datei nochmal bauen
 % rubber: watch $base.thm
 % rubber: makeidx.tool      xindy
 % rubber: makeidx.language  german-din
 % 
-% scrreprt trifft am Besten die Bedürfnisse eines Skripts, das ganze wird
+% scrreprt trifft am Besten die BedÃ¼rfnisse eines Skripts, das ganze wird
 % zweiseitig (twoside), d.h. es wird zwischen linker und rechter Seite
-% unterschieden, und wir verwenden zwischen den Absätzen einen Abstand
-% von einer halben Zeile (halfparskip) und dafür keinen Absatzeinzug,
+% unterschieden, und wir verwenden zwischen den AbsÃ¤tzen einen Abstand
+% von einer halben Zeile (halfparskip) und dafÃ¼r keinen Absatzeinzug,
 % wobei die letzte Zeile eines Absatzes zu min. 1/4 leer ist.
 
-\RequirePackage[l2tabu,orthodox]{nag}  % nag überprüft den Text auf veraltete
+\RequirePackage[l2tabu,orthodox]{nag}  % nag Ã¼berprÃ¼ft den Text auf veraltete
                    % Befehle oder solche, die man nicht in LaTeX verwenden
                    % soll -- l2tabu-Checker in LaTeX
 
@@ -27,31 +27,31 @@
 \usepackage{babel}
 
 %\usepackage{lmodern}		% Latin Modern
-\usepackage[T1]{fontenc}        % T1-Schriften notwendig für PDFs
-\usepackage{textcomp}           % wird benötigt, damit der \textbullet
-                                % für itemize in lmodern gefunden wird.
+\usepackage[T1]{fontenc}        % T1-Schriften notwendig fÃ¼r PDFs
+\usepackage{textcomp}           % wird benÃ¶tigt, damit der \textbullet
+                                % fÃ¼r itemize in lmodern gefunden wird.
 
 \usepackage[intlimits,leqno]{amsmath}
 \usepackage[all,warning]{onlyamsmath}  % warnt bei Verwendung von nicht
                                        % amsmath-Umgebungen z.\,B. $$...$$
-\usepackage{amssymb}     % wird für \R, \C,... gebraucht
+\usepackage{amssymb}     % wird fÃ¼r \R, \C,... gebraucht
 \usepackage{fixmath}     % ISO-konforme griech. Buchstaben
 
-\usepackage[amsmath,thmmarks,hyperref]{ntheorem} % für die Theorem-Umgebungen
+\usepackage[amsmath,thmmarks,hyperref]{ntheorem} % fÃ¼r die Theorem-Umgebungen
                                                  % (satz, defini, bemerk)
 \usepackage{xspace}      % wird weiter unten gebraucht
-\usepackage{slashbox}    % für schräge Striche links oben in der
+\usepackage{slashbox}    % fÃ¼r schrÃ¤ge Striche links oben in der
                          % Tabelle; s. texdoc slashbox
 
 \usepackage{paralist}    % besseres enumerate und itemize und neue
                          % compactenum/compactitem; s. texdoc paralist
 
 \usepackage{svn}         % Zum Auswerten und ordentlichen Darstellen der
-                         % SVN-Schlüsselwörter (s. vor \begin{document})
-                         % dafür muss in SVN noch das Flag svn:keywords
+                         % SVN-SchlÃ¼sselwÃ¶rter (s. vor \begin{document})
+                         % dafÃ¼r muss in SVN noch das Flag svn:keywords
                          % auf "LastChangedRevision LastChangedDate"
                          % gesetzt werden
-\usepackage{ellipsis}    % Korrektur für \dots
+\usepackage{ellipsis}    % Korrektur fÃ¼r \dots
 \usepackage{fixltx2e}
 \usepackage[final]{microtype} % Verbesserung der Typographie
 \usepackage{nicefrac}
@@ -63,28 +63,28 @@
 \usepackage{courier}
 \usepackage{todonotes}
 
-% Damit auch die Zeichen im Mathemode in Überschriften fett sind
+% Damit auch die Zeichen im Mathemode in Ãœberschriften fett sind
 % <news:lzfyyvx3pt.fsf@tfkp12.physik.uni-erlangen.de>
 \addtokomafont{sectioning}{\boldmath}
 
-% nach dem Theoremkopf wird ein Zeilenumbruch eingefügt, die Schrift des
-% Körpers ist normal und der Kopf wird fett gesetzt
+% nach dem Theoremkopf wird ein Zeilenumbruch eingefÃ¼gt, die Schrift des
+% KÃ¶rpers ist normal und der Kopf wird fett gesetzt
 \theoremstyle{break}
 \theoremnumbering{arabic}
 \theorembodyfont{\normalfont}
 \theoremheaderfont{\normalfont\bfseries}
 
-% Das Ende von Umgebungen, für die kein Beweis erbracht wurde, soll mit einer
+% Das Ende von Umgebungen, fÃ¼r die kein Beweis erbracht wurde, soll mit einer
 % leeren Box gekennzeichnet werden. Wenn jedoch ein Beweis erbracht wurde,
-% soll kein Zeichen ausgegeben werden (die ausgefüllte Box vom proof wird
-% verwendet); man beachte die spezielle Definition von \theoremheaderfont für
+% soll kein Zeichen ausgegeben werden (die ausgefÃ¼llte Box vom proof wird
+% verwendet); man beachte die spezielle Definition von \theoremheaderfont fÃ¼r
 % die Umgebung proof
 % \newboolean{hasproof}
 % \theoremheaderfont{\global\hasprooffalse\normalfont\bfseries}
 % \theoremsymbol{\ifthenelse{\boolean{hasproof}}{}{\ensuremath{_\Box}}}
 
 % Die folgenden Umgebungen werden einzeln nummeriert und am Ende jedes
-% Kapitels zurückgesetzt
+% Kapitels zurÃ¼ckgesetzt
 \newtheorem{defini}{Definition}[section]
 \newtheorem{satz}[defini]{Satz}
 \newtheorem{lem}[defini]{Lemma}
@@ -119,20 +119,20 @@
 
 \newcommand*{\R}{\mathbb{R}}      % reelle Zahlen
 \newcommand*{\C}{\mathbb{C}}      % komplexe Zahlen
-\newcommand*{\N}{\mathbb{N}}      % natürliche Zahlen
+\newcommand*{\N}{\mathbb{N}}      % natÃ¼rliche Zahlen
 \newcommand*{\Q}{\mathbb{Q}}      % gebrochene Zahlen
 \newcommand*{\Z}{\mathbb{Z}}      % ganze Zahlen
 
-% Wenn irgendwo Unklarheiten zum Inhalt im Skript auftreten, können sie
+% Wenn irgendwo Unklarheiten zum Inhalt im Skript auftreten, kÃ¶nnen sie
 % einfach mit \help{Ich verstehe das nicht} hervorgehoben werden. Dies
 % macht es leichter sie alle zu finden und auch ganz einfach
 % auszublenden, indem man den Befehl einfach leer definiert
 \newcommand*{\help}[1]{\textcolor{green}{help: #1}}
 
-% \todo ist das gleiche wie \help nur für offene Aufgaben
+% \todo ist das gleiche wie \help nur fÃ¼r offene Aufgaben
 % \newcommand*{\todo}[1]{\textcolor{red}{todo: #1}}
 
-% Um wichtige Begriffe im Text überall gleich vorzuheben (gleiches
+% Um wichtige Begriffe im Text Ã¼berall gleich vorzuheben (gleiches
 % Markup), sollte dieser Befehl verwendet werden. Das Argument wird
 % automatisch als Indexeintrag verwendet. Dieser kann aber auch als
 % optionales Argument selbst bestimmt werden.
@@ -140,33 +140,19 @@
   \ifthenelse{\equal{#1}{}}{\index{#2}}{\index{#1}}%
 }
 
-% Befehl für die Darstellung der Gliederungsüberschriften im Index
-% \newcommand*{\lettergroup}[1]{\minisec{#1}}
-
-% Für Leute, die nicht gern o.\,B.\,d.\,A. jedesmal eintippen wollen
-% \newcommand*{\obda}{o.\,B.\,d.\,A.\xspace}
-
-% Diese Befehle sind dafür gedacht, dass die Symbole für "genau dann wenn"
-% im ganzen Dokument gleich aussehen. Außerdem erlaubt es eine schnelle
-% Veränderung aller Stellen, falls der Prof. doch nicht mehr gdw nimmt,
-% sondern \Leftrightarrow.
-% \newcommand*{\gdw}{\ifthenelse{\boolean{mmode}}%
-% 			       {\mspace{8mu}gdw\mspace{8mu}}%
-% 			       {$gdw$\xspace}}
-% \newcommand*{\gdwdef}{\ifthenelse{\boolean{mmode}}%
-% 			       {\mspace{8mu}gdw_{def}\mspace{8mu}}%
-% 			       {$gdw_{def}$\xspace}}
+% Befehl fÃ¼r die Darstellung der GliederungsÃ¼berschriften im Index
+\newcommand*{\lettergroup}[1]{\minisec{#1}}
 
 % Um sicherzustellen, dass jeder Betrag-/jede Norm links und rechts die
 % Striche bekommt, sind diese Befehle da. Damit kann man nicht die
-% rechten Striche vergessen und es wird etwas übersichtlicher. (Vorschlag
+% rechten Striche vergessen und es wird etwas Ã¼bersichtlicher. (Vorschlag
 % ist aus amsldoc) \abs[\big]{\abs{a}-\abs{b}} \leq \abs{a+b}
 \newcommand*{\abs}[2][]{#1\lvert#2#1\rvert}
 \newcommand*{\norm}[2][]{#1\lVert#2#1\rVert}
 
 % Das original Epsilon sieht nicht so toll aus
 \renewcommand*{\epsilon}{\varepsilon}
-% ... und mancheinem gefällt auch das Phi nicht
+% ... und mancheinem gefÃ¤llt auch das Phi nicht
 \renewcommand*{\phi}{\varphi}
 
 \newcommand*{\K}{\mathbb{K}}
