--- a/carl-hoehereana1/skript.ltx
+++ b/carl-hoehereana1/skript.ltx
@@ -88,6 +88,7 @@
 \newtheorem{defini}{Definition}[section]
 \newtheorem{satz}[defini]{Satz}
 \newtheorem{lem}[defini]{Lemma}
+\newtheorem{folg}[defini]{Folgerung}
 
 % Die folgenden Theoremumgebungen bekommen keine Nummer
 \theoremstyle{nonumberbreak}
@@ -110,6 +111,7 @@
 \newcommand*{\bspautorefname}{Beispiel}
 \newcommand*{\festlautorefname}{Festlegung}
 \newcommand*{\lemautorefname}{Lemma}
+\newcommand*{\folgautorefname}{Folgerung}
 % Zwischen Unter- und Unterunterabschnitten sollte nicht unterschieden
 % werden.
 \renewcommand*{\subsectionautorefname}{Abschnitt}
@@ -676,7 +678,7 @@ B(s,\epsilon)$ gibt.
 \end{bemerk}
 
 %satz I.2.5
-\begin{satz}[Charakterisierung von Präkompaktheit]
+\begin{satz}[Charakterisierung von Präkompaktheit]\label{satz:i.25}
   Sei $(X,d)$ ein metrischer Raum. Dann sind die folgenden Aussagen äquivalent:
   \begin{enumerate}[(i)]
    \item $M\subseteq X$ ist präkompakt.
@@ -716,6 +718,180 @@ B(s,\epsilon)$ gibt.
     Teilfolge von $(x_{n})$ mit folgenden Eigenschaften ist: $d(x_{n}^{(n)},
     x_{n}^{(m)})\leq\nicefrac{2}{m}$ für $n\geq m$, d.\,h. $(x_{n}^{(m)})$ ist
     Cauchy-Teilfolge von $(x_{n})$.
+  \end{proof}
+\end{satz}
+
+%satz I.2.6
+\begin{satz}\label{satz:i.26}
+  Sei $(X,d)$ ein metrischer Raum. Dann sind die folgenden beiden Aussagen
+  äquivalent:
+  \begin{enumerate}[(i)]
+   \item $M\subseteq X$ kompakt
+   \item $M\subseteq X$ präkompakt und vollständig.
+  \end{enumerate}
+  \begin{proof}
+    Für die Richtung von (i) nach (ii) sei $x_{n})$ eine Cauchyfolge in $M$.
+    Da $M$ kompakt ist, existiert eine Teilfolge
+    $(x_{n_{k}})\subset(x_{n})\colon x_{n_{k}}\xrightarrow{n\rightarrow\infty}
+    x\in M$. Aus \autoref{lem:i.22} folgt schließlich
+    $x_{n}\xrightarrow{n\rightarrow\infty} x\in M$, also ist $M$ vollständig.
+
+    Sei $(x_{n})\subseteq M$ eine Folge. Denn existiert wegen der Kompaktheit
+    von $M$ eine konvergente Teilfolge. Also ist sie auch Cauchy"=Teilfolge.
+    Der \autoref{satz:i.25} impliziert, dass $M$ präkompakt ist.
+
+    Für die Richtung (ii) nach (i) sei $x_{n})\subseteq M$ eine Folge. Da $M$
+    präkompakt ist, enthält sie nach \autoref{satz:i.25} eine
+    Cauchy"=Teilfolge. Die Vollständigkeit von $M$ impliziert, dass die
+    Cauchy"=Teilfolge in $M$ konvergiert. Also ist $M$ kompakt.
+  \end{proof}
+\end{satz}
+
+%folg I.2.7
+\begin{folg}
+  Sei $(X,d)$ ein metrischer Raum. Dann gelten folgende Aussagen:
+  \begin{enumerate}[(i)]
+   \item Ist $M\subseteq X$ präkompakt, so ist $M$ beschränkt.
+   \item Ist $M\subseteq X$ kompakt, so ist $M$ beschränkt und abgeschlossen.
+  \end{enumerate}
+  \begin{proof}
+    \begin{enumerate}[(i)]
+     \item Für $\epsilon=1$ existieren $s_{1},\dotsc, s_{n}\in M$ mit
+      $M\subseteq\bigcup_{i=1}^{n} B(s_{i}, 1)$. Wir setzen für den maximalen
+      Abstand der Mittelpunkte $r\colon=\max\{d(s_{i}, s_{j})\colon1\leq i,j
+      \leq n\}$. Dann gilt $M\subseteq B(s_{1}, r+1)$, d.\,h. $M$ ist
+      beschränkt. Denn für $A\in M$ existieren $s_{k}$ mit $d(A, s_{k})\leq1$.
+      Damit folgt, $d(A,s_{1})\leq d(A,s_{k})+ d(s_{k}, s_{1})\leq1+r
+      \Rightarrow A\in B(s_{1}, r+1)$.
+     \item Wenn $M$ kompakt ist, dann folgt nach \autoref{satz:i.26} auch,
+      dass es präkompakt und vollständig ist. Nach Punkt~(i) ist $M$ somit
+      beschränkt. Die Vollständigkeit impliziert, dass $M$ auch abgeschlossen
+      ist. Dann ist $(x_{n})\subseteq M$ eine konvergente Folge in $X$. Dann
+      ist $x_{n})$ eine Cauchyfolge in $M$ und da $M$ vollständig ist, ist
+      $\lim x_{n}\in M$, d.\,h. $M$ abgeschlossen.
+    \end{enumerate}
+  \end{proof}
+\end{folg}
+
+\begin{bemerk}
+  Die Umkehrung der obigen Folgerung gilt im Allgemeinen \emph{nicht}. Denn
+  sei $M=\{e_{i}= (0,0,\dotsc,0,1,0,\dotsc)\colon i\in\N\}\subseteq\ell_{p}$.
+  Es gilt, $\norm{e_{i}}_{p}=1$. Aber $e_{i})$ enthält keine
+  Cauchy"=Teilfolge, denn $\norm{e_{i}-e_{j}}_{p}=2^{\nicefrac{1}{p}}$ für
+  $i\neq j$.
+\end{bemerk}
+
+%satz I.2.8
+\begin{satz}
+  Sei $(X,d)$ ein vollständiger metrischer Raum. Dann sind äquivalent:
+  \begin{enumerate}[(i)]
+   \item $M\subseteq X$ präkompakt
+   \item $\overline{M}\subseteq X$ kompakt
+  \end{enumerate}
+  \begin{proof}
+    \begin{itemize}
+     \item[(i)$\Rightarrow$(ii)] Für $\epsilon>0$ existieren $s_{1},\dotsc,
+      s_{n}\in X$ mit $M\subseteq\bigcup_{i=1}^{n} B(s_{i},
+      \epsilon)\Rightarrow \overline{M}\subseteq\overline{\bigcup_{i=1}^{n}
+      B(s_{i}, \epsilon)}= \bigcup_{i=1}^{n} B(s_{i}, \epsilon)$. Der letzte
+      Schritt resultiert aus der endlichen Vereinigung. Somit ist
+      $\overline{M}$ präkompakt und abgeschlossen. Da $X$ vollständig ist, ist
+      $\overline{M}$ auch vollständig. Nach \autoref{satz:i.26} ist
+      $\overline{M}$ somit kompakt.
+     \item[(ii)0>(i)] Da $\overline{M}$ kompakt ist, folgt nach
+      \autoref{satz:i.26}, dass $\overline{M}$ auch präkompakt ist. Wegen
+      $M\subseteq\overline{M}$ ist $M$ auch präkompakt.
+    \end{itemize}
+  \end{proof}
+\end{satz}
+
+\begin{defini}
+  Sei $(X,d)$ ein metrischer Raum. Ein System $\{G_{i}\}_{i\in I}$ von offenen
+  Mengen aus $X$ heißt genau dann \highl[Überdeckung!offene]{offene
+  Überdeckung}, wenn $M\subseteq\bigcup_{i\in I} G_{i}$.
+\end{defini}
+
+\begin{defini}
+  Sei $(X,d)$ ein metrischer Raum. Eine Menge $M\subseteq X$ heißt genau dann
+  \highl{überdeckungskompakt}, wenn jede offene Überdeckung von $M$ eine
+  endliche Teilüberdeckung enthält.
+
+  Diese Eigenschaft nennt man oft auch \highl{Heine"=Borel"=Eigenschaft}.
+\end{defini}
+
+%satz I.2.9
+\begin{satz}
+  Sei $X,d)$ ein metrischer Raum. Dann sind äquivalent.
+  \begin{enumerate}[(i)]
+   \item $X$ ist überdeckungskompakt.
+   \item $X$ ist folgenkompakt.
+  \end{enumerate}
+  \begin{proof}
+    \begin{itemize}
+     \item[(i)$\Rightarrow$(ii)] Sei $X$ überdeckungskompakt. Wir nehmen an,
+      dass $X$ nicht folgenkompakt ist. Also sei $(x_{n})$ eine Folge ohne
+      konvergente Teilfolge. Dann kann kein $x\in X$ ein Häufungspunkt von
+      $(x_{n})$ sein, d.\,h. für alle $x\in X$ gibt es ein $\epsilon_{x}>0$
+      mit $\mathring{B}(x, \epsilon_{x})$ enthält nur endlich viele Glieder
+      der Folge $(x_{n})$. Wegen $X= \bigcup_{x\in X} \mathring{B}
+      (x,\epsilon_{x})$ und der Überdeckungskompaktheit existieren endlich
+      viele $B(x,\epsilon_{x})$, die $X$ überdecken. Also enthält $X$ nur
+      endlich viele der $x_{n}$. \lightning{}
+     \item[(ii)$\Rightarrow$(i)] Wir zeigen zunächst
+      \begin{gather}
+	\label{eq:14}
+	   \forall\epsilon>0\,\exists N\in\N\,\exists x_{1},\dotsc, x_{N}\in
+	   X\colon X=\bigcup_{k=1}^{n} B(x_{k}, \epsilon)
+      \end{gather}
+      Dazu nehmen wir an, dass \autoref{eq:14} falsch ist, also gilt:
+      $\exists\epsilon>0\,\forall N\in \N\,\forall x_{1},\dotsc, x_{N}\colon
+      \bigcup_{k=1}^{n} B(x_{k}, \epsilon)\subsetneq X$. Wir konstruieren nun
+      eine Folge ohne konvergente Teilfolge. Sei hierzu $x_{1}\in X$ fixiert.
+      Wegen $B(x_{1},\epsilon)\neq X$ existiert $x_{2}\in X$ mit $d(x_{2},
+      x_{1})\geq\epsilon$. Nun ist auch $\mathring{B}(x_{1}, \epsilon)\cup
+      \mathring{B}(x_{2}, \epsilon)\neq X$. Also existiert ein $x_{3}\in X$
+      mit $d(x_{3}, x_{1})\geq\epsilon$ und $d(x_{3}, x_{2})\geq\epsilon$.
+      Wenn man mit dem Schema weiterverfährt, erhält man eine Folge
+      $(x_{n})\subseteq X\colon d(x_{n}, x_{k})\geq\epsilon$ für
+      $k=1,\dotsc,n-1$. Damit enthält $(x_{n})$ keine Cauchy-Teilfolge und
+      damit auch keine konvergente Teilfolge. Dies ist ein Widerspruch zur
+      Kompaktheit und damit gilt \autoref{eq:14}.
+
+      Sei $X$ kompakt und $\{G_{i}\}_{i\in I}$ eine offene Überdeckung von
+      $X$, die \emph{keine} endliche Teilüberdeckung enthält und
+      $\epsilon_{1}=1$. Wir wählen nach \autoref{eq:14} $x_{1}^{(1)},\dotsc,
+      x_{N_{1}}^{(1)}\colon X= \bigcup_{i=1}^{N_{1}} \mathring{B}(x_{i}^{(1)},
+      \epsilon_{1})$. Mindestens eine Kugel ist nicht endlich überdeckbar.
+      Dies sei o.\,B.\,d.\,A. $\mathring{B}(x_{1}^{(1)}, \epsilon_{1})$. Nun
+      sei weiter $\epsilon_{2}=\nicefrac{1}{2}$ und $X=\bigcup_{i=1}^{N_{2}}
+      \mathring{B}(x_{i}^{(2)}, \epsilon_{2})$ nach \autoref{eq:14} gewählt.
+      Es folgt, $\mathring{B}(x_{1}^{(1)}, \epsilon_{1})=
+      \bigcup_{i=1}^{N_{2}} \mathring{B}(x_{1}^{(1)}, \epsilon_{1})\cap
+      \mathring{B}(x_{i}^{(2)}, \epsilon_{2})$. Eine dieser Mengen kann nicht
+      endlich überdeckbar sein. Jetzt wenden wir \autoref{eq:14} mit
+      $\epsilon_{3}=\frac{1}{2^{2}}$ an. Dann erhalten wir einen Punkt
+      $x_{1}^{(3)}$, so dass $\mathring{B}(x_{1}^{(1)}, \epsilon_{1})\cap
+      \mathring{B}(x_{1}^{(2)}, \epsilon_{2})\cap \mathring{B}(x_{1}^{(3)},
+      \epsilon_{3})$ nicht endlich überdeckbar ist.
+
+      Führen wir diese Prozedur fort, so erhalten wir mit
+      $\epsilon_{n}=2^{1-n}$ Punkte $z_{1},\dotsc, z_{n}$, sodass
+      $\bigcap_{k=1}^{n} \mathring{B}(z_{k}, \epsilon_{k})$ für kein $n\in\N$
+      endlich überdeckbar ist. Insbesondere ist $\mathring{B}(z_{n},
+      \epsilon_{n})\cap \mathring{B}(z_{n+1}, \epsilon_{n+1})\neq\emptyset$
+      für $n\in\N$. Betrachten wir die entstandene Folge $(z_{n})_{n\in\N}$
+      und fixieren ein $\nu\in\mathring{B}(z_{n}, \epsilon_{n})\cap
+      \mathring{B}(z_{n+q}, \epsilon_{n+1})$. Dann gilt die Abschätzung:
+      $d(z_{n+1}, z_{n})\leq d(z_{n+1},\nu)+ d(\nu,z_{n})\leq\epsilon_{n+1}+
+      \epsilon_{n}\leq2\epsilon_{n}=2^{2-n}$ für $n\in\N$. Damit ist $(z_{n})$
+      eine Cauchyfolge. Denn für $m>n$ gilt:
+      \begin{align*}
+	d(z_{m}, z_{n}) &\leq d(z_{n}, z_{n+1})+ d(z_{n+1}, z_{n+2})+\dotsb+
+	   d(z_{m-1}, z_{m})\\
+	&\leq2^{2-n}+ 2^{1-n}+\dotsb+2^{3-m}\leq\sum_{k=0}^{\infty} 2^{2-n-k}=
+	   2^{2-n} \sum_{k=0}^{\infty} 2^{-k}= 2^{3-m}
+      \end{align*}
+    \end{itemize}
   \end{proof}
 \end{satz}
 
